<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="desk_clock_caption">Desk Clock</string>
    <string name="night_clock">@string/desk_clock_caption</string>
	<string name="world_clock_caption">World Clock</string>
    <string name="add_city">Add city</string>
    <string name="addcity_search">Search cities</string>
    <string name="city_not_found">CITY NOT FOUND</string>
	<string name="delete_city_caption">Delete cities</string>
	<string name="rearrange_city_caption">Edit list</string>
	<string name="home_settings">Set home time zone</string>
	<string name="current_settings">Set date &amp; time</string>
	<string name="stopwatch_caption">Stopwatch</string>
	<string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
	<string name="alarm_caption">Alarms</string>
	<string name="set_alarm_caption">Set alarm</string>
	<string name="delete_alarm_caption">Delete alarms</string>
    <string name="add_alarm">Add alarm</string>
    <string name="add_alarm_error">Maximum number of alarms reached.</string>
    <string name="alarm_ringtone">Alarm sound</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string name="alarm_alert_snooze_not_set">Snooze not set. Next alarm set for <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_dismissed">Alarm dismissed.</string>
    <string name="alarm_set">This alarm is set for <xliff:g id="time_delta">%s</xliff:g> from now.</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="and">" and "</string>
    <string name="space">" "</string>
    <string name="subminute">"less than 1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="nextAlarm">Next alarm: <xliff:g id="next_alarm_time">%s</xliff:g></string>
    <string name="every_day">Every day</string>
    <string name="day_concat">", "</string>
    <string name="error">Unable to add alarm</string>
    <string name="dberror">Sorry, the alarm could not be set.</string>
    <string-array name="days_of_week">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
        <item>SUNDAY</item>
    </string-array>
    <string-array name="month_of_year">
    	<item>JAN</item>
    	<item>FEB</item>
    	<item>MAR</item>
    	<item>APR</item>
    	<item>MAY</item>
    	<item>JUN</item>
    	<item>JUL</item>
    	<item>AUG</item>
    	<item>SEP</item>
    	<item>OCT</item>
    	<item>NOV</item>
    	<item>DEC</item>
    </string-array>
    <string-array name="days_of_week_capital">
        <item></item>
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    <string-array name="days_of_week_whole_capital">
        <item></item>
        <item>SUNDAY</item>
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
    </string-array>
    <string-array name="repeat_option">
        <item>Mon - Fri</item>
        <item>Do not repeat</item>
        <item>Every day</item>
        <item>Skip holidays</item>
        <item>Custom</item>
    </string-array>
    <string name="timer_caption">Timer</string>
    <string name="alert_sound">Alarm sound</string>
    <string name="time_up">Time\'s up!</string>
	<string name="htc_private_app_clock">Clock</string>
	<string name="loading_city">Loading city list...</string>
	<string name="error_title">Database error</string>
	<string name="query_fail">Errors occurred while accessing the database</string>
    <string name="select_ringtone">Select alarm sound</string>
    <string name="select_alert">Select alert sound</string>
    <string-array name="days_of_week_abbr">
        <item>M</item>
        <item>TU</item>
        <item>W</item>
        <item>TH</item>
        <item>F</item>
        <item>SA</item>
        <item>SU</item>
    </string-array>
    <string name="analog_gadget">Analog Clock</string>
    <string name="add_city_error_title">Unable to add city</string>
    <string name="add_city_error_msg">You can have a maximum of 15 cities. To add a new one, please delete an existing city.</string>
    <string name="city_duplicate">This city is already in the list</string>
    <string name="alarm_in_volume_increase_mode_title">Gentle alarm</string>
    <string name="alarm_in_volume_increase_mode_summary">Gradually increase alarm volume</string>
    <string name="alarm_in_voice_mode_title">Voice Control</string>
    <string name="alarm_in_voice_mode_summary">Dismiss and snooze alarms</string>
    <string name="alarm_in_voice_mode_tips">To use voice control, try saying: \n \"Dismiss\",\"Snooze\". See \'Voice Control \' setting for other voice commands</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="alarm_volume_summary">Set the volume of alarms</string>
    <string name="snooze_duration_title">Snooze duration</string>
    <string-array name="snooze_duration_entries">
      <item>5 minutes</item>
      
      <item>@string/tm_10_minutes</item>
      <item>15 minutes</item>
      <item>20 minutes</item>
      <item>25 minutes</item>
      
      <item>@string/tm_30_minutes</item>
    </string-array>
    <string name="volume_button_setting_title">Volume button options</string>
    <string-array name="flip_phone_setting_entries">
        <item>Do nothing</item>
        <item>Snooze</item>
        <item>@string/va_dismiss</item>
    </string-array>
    <string-array name="volume_button_setting_entries">
      <item>Do nothing</item>

      <item>Snooze</item>

      
      <item>@string/va_dismiss</item>
    </string-array>
    <string-array name="sprint_volume_button_setting_entries">
      <item>Do nothing</item>

      <item>Snooze</item>

      
      <item>@string/va_dismiss</item>

      <item>Silence</item>
    </string-array>
    <string name="volume_button_setting_summary">Choose what the volume buttons do when pressed during an alarm</string>
    <string name="flip_setting_title">Flip options</string>
    <string name="flip_phone_setting_summary">Choose what happens when you flip the phone face down during an alarm</string>
    <string name="weather_high_indicator">H:</string>
    <string name="weather_low_indicator">L:</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Tap to cancel.</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="alarm_on">Alarm On</string>
    <string name="sound_selection_title">Select alarm sound from</string>
    <string name="ringtone_title">Ringtones</string>
    <string-array name="sound_selection_setting_entries">
      
      <item>Alarm sound</item>
      
      <item>@string/nn_ringtone</item>
      
      <item>@string/nn_music</item>
    </string-array>
    <string name="total_title">Total</string>
    <string name="lap_title">Lap</string>
    <string name="lap_id">Lap #</string>
    <string name="lap_total_time">Total</string>
    <string name="lap_time">This lap</string>
    <string name="lap_error">Lap not saved</string>
    <string name="add_lap_error">Stopwatch can save a maximum of 300 laps. Tap Reset to clear lap history.</string>
    <string name="location_enable">To see local weather,\ntap here to turn on Location Service.</string>
    <string name="full_screen_menu_item">Full screen</string>
    <string name="fit_screen_menu_item">Fit screen</string>
    <string name="storage_full_description">You don\'t have enough free space remaining in your phone\'s storage.Please delete some content or applications.Tap \"Settings\" below to manage your apps.</string>
    <string name="timer_reminder_tile_timer_up">Time is up</string>
    <string name="timer_reminder_tile_setting">Settings</string>
    <string-array name="days_of_week_short">
        <item>@string/tm_mon</item>
        <item>@string/tm_tue</item>
        <item>@string/tm_wed</item>
        <item>@string/tm_thu</item>
        <item>@string/tm_fri</item>
        <item>@string/tm_sat</item>
        <item>@string/tm_sun</item>
    </string-array>
    <string name="tm_mon">Mon</string>
    <string name="tm_tue">Tue</string>
    <string name="tm_wed">Wed</string>
    <string name="tm_thu">Thu</string>
    <string name="tm_fri">Fri</string>
    <string name="tm_sat">Sat</string>
    <string name="tm_sun">Sun</string>
    <string name="tm_10_minutes">10 minutes</string>
    <string name="tm_30_minutes">30 minutes</string>
    <string name="va_dismiss">Dismiss</string>
    <string name="nn_ringtone">Ringtone</string>
    <string name="nn_music">Music</string>
    <string name="bt_done_str">Done</string>
    <string name="tm_am">AM</string>
    <string name="tm_pm">PM</string>
    <string name="phone_type_home">Home</string>
    <string name="dialog_button_ok">OK</string>
    <string name="bt_cancel_str">Cancel</string>
    <string name="snooze">Snooze</string>
    <string name="lockscreen_hint_dismiss">Drag down to dismiss</string>
    <string name="nn_alarm">Alarm</string>
    <string name="tm_today">Today</string>
    <string name="tm_yesterday">Yesterday</string>
    <string name="tm_tomorrow">Tomorrow</string>
    <string name="tm_current">Current</string>
    <string name="va_rearrange">Rearrange</string>
    <string name="va_edit">Edit</string>
    <string name="va_select_all">Select all</string>
    <string name="va_deselect_all">Deselect all</string>
    <string name="nn_description">Description</string>
    <string name="tm_1_day">1 day</string>
    <string name="tm_1_hour">1 hour</string>
    <string name="tm_1_minute">1 minute</string>
    <string name="st_on">On</string>
    <string name="st_off">Off</string>
    <string name="st_never">Never</string>
    <string name="va_add">Add</string>
    <string name="va_edit_tabs">Edit tabs</string>
    <string name="sort_by">Sort options</string>
    <string name="sort_type_time">Time</string>
    <string name="sort_type_time_created">Time created</string>
    <string-array name="sort_types">
        <item>@string/sort_type_time</item>
        <item>@string/sort_type_time_created</item>
    </string-array>
    <string name="ls_no_weather_data_available">No weather data available</string>
    <string name="st_storage_full">Storage full</string>
    <string name="nn_settings">Settings</string>
    <string name="nn_tips_help">Tips &amp; Help</string>
    <string name="internal_memory_low">Your phone is low on storage space. Please make some free space before using this application.</string>
    <string name="st_default">Default</string>
    <string name="st_silent">Silent</string>
    <string name="st_more">More</string>
    <string name="alarm_offalarm">Sound when phone off</string>
    <string name="clock_permission_dialog_title">@string/htc_private_app_clock</string>
    <string name="clock_permission_dialog_content">To work properly, this app needs to access your storage. You can manage Clock\'s permissions in Settings.</string>
    <string name="clock_permission_dialog_btn_settings">Settings</string>
</resources>