<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">
    <CheckBoxPreference
        android:key="alarm_in_volume_increase_mode"
        android:title="@string/alarm_in_volume_increase_mode_title"
        android:summary="@string/alarm_in_volume_increase_mode_summary" />
    
    <com.htc.android.worldclock.utils.ClockVolumePreference
        android:key="alarm_in_alarm_volume"
        android:title="@string/alarm_volume_title"
        android:summary="@string/alarm_volume_summary"
        android:dialogTitle="@string/alarm_volume_title"
        android:persistent="false"
        android:streamType="alarm" />

    <ListPreference
        android:key="snooze_duration"
        android:title="@string/snooze_duration_title"
        android:entries="@array/snooze_duration_entries"
        android:entryValues="@array/snooze_duration_values"
        android:defaultValue="10"
        android:dialogTitle="@string/snooze_duration_title" />

    <ListPreference
        android:key="volume_button_setting"
        android:title="@string/volume_button_setting_title"
        android:entries="@array/volume_button_setting_entries"
        android:entryValues="@array/volume_button_setting_values"
        android:summary="@string/volume_button_setting_summary"
        android:defaultValue="1" />

    <com.htc.android.worldclock.utils.LongSummaryListPreference
        android:key="flip_to_setting"
        android:title="@string/flip_setting_title"
        android:entries="@array/flip_phone_setting_entries"
        android:entryValues="@array/volume_button_setting_values"
        android:summary="@string/flip_phone_setting_summary"
        android:defaultValue="2"
        android:dialogTitle="@string/flip_setting_title"/>

    <com.htc.android.worldclock.voiceutils.VoicePreference
        android:key="alarm_in_voice_mode" />

</PreferenceScreen>
